CMAKE_MINIMUM_REQUIRED(VERSION 3.24..4.4)

SET(PROGRAM_NAME "C++ Template" CACHE STRING "main executeable name")

IF(MSVC)
  ADD_COMPILE_OPTIONS(/W3 /WX)
ELSE()
  ADD_COMPILE_OPTIONS(-W -Wall -std=c++20)
ENDIF()

PROJECT(
  ${PROGRAM_NAME}
  VERSION 1.0.0
  DESCRIPTION "A modern C++ template project"
  LANGUAGES CXX
)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_COLOR_DIAGNOSTICS ON)

SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Dependencies (If needed)
INCLUDE(FetchContent)

# SET(FETCHCONTENT_QUIET FALSE)

SET(FTXUI_BUILD_DOCS ON)
SET(FTXUI_BUILD_EXAMPLES ON)
# SET(FTXUI_CLANG_TIDY ON )
SET(FTXUI_ENABLE_CCACHE ON )
SET(FTXUI_QUIET ON )


FetchContent_Declare(ftxui
  GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui
  GIT_TAG main
  GIT_PROGRESS TRUE
  GIT_SHALLOW TRUE
)

FetchContent_MakeAvailable(ftxui)

ADD_EXECUTABLE(${PROGRAM_NAME})

TARGET_SOURCES(${PROGRAM_NAME} PRIVATE
  src/main.cpp
  src/app.cpp
)

target_link_libraries(${PROGRAM_NAME} PRIVATE ftxui)
